--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "ext-iconv": "*",
         "knplabs/knp-markdown-bundle": "^1.8",
         "sensio/framework-extra-bundle": "^5.5",
+        "sentry/sentry-symfony": "^3.5",
         "symfony/asset": "5.0.*",
         "symfony/console": "5.0.*",
         "symfony/debug-bundle": "5.0.*",
@@ -21,6 +22,7 @@
         "symfony/yaml": "5.0.*"
     },
     "require-dev": {
+        "symfony/maker-bundle": "^1.26",
         "symfony/profiler-pack": "^1.0"
     },
     "config": {
@@ -66,7 +68,7 @@
     },
     "extra": {
         "symfony": {
-            "allow-contrib": false,
+            "allow-contrib": true,
             "require": "5.0.*"
         }
     }
